@@ -18,3 +18,5 @@ male_av_face.shp
 dupre_face.shp
 iolo_face.shp
 shamino_face.shp
+greaves.shp
+spiked_shield.shp
