@@ -25,6 +25,7 @@ Gold sextant		650/1		-		(hanging from belt)
 Leather Collar		582		-
 Gorget			586		Adam Delman
 Magic gorget		843		Adam
+Ankh Amulet		955/0		Oblivious
 Heart Amulet		955/2		Adam
 FoV amulets		955/7-10	Willem Jan
 Grey cloak		285/0		-
@@ -36,11 +37,12 @@ Blue dress		249/2		-
 Dark-brown hood		444/0		-
 Light-brown hood	444/1		-
 Caddellite helmet	638/0		Willem Jan
-Greaves			353		-
+Greaves			353		Oblivious
 Brown pants		738/0,1		-
 Green pants		738/2,4		-
 Brownish pants		738/3,5		-
 Shoes			585		-
+Spiked Shield		578		Oblivious
 Magic boomerang		550		Willem Jan
 Fire sword		551		-		(wrong clr. fire in SI)
 Hawk			555		-
